[package]
name = "dispresence-rs"
author = "Ciavi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "^0"
discord-rich-presence = "0.2.3"
eframe = "^0"
rfd = "^0"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"